SERVER-22535 Migration source manager checks for PlanExecutor errors during initial index scan for documents to clone